# fast-auth_service

./: .env.sample  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
app/: main.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 72798af9d366_initial_auth_user_model.py
app/api/: dependencies.py  endpoints.py  security.py
app/core/: config.py  database.py
app/models/: user.py
app/schemas/: user.py
