[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication service for Boosty Clone"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.2",
    "sqlalchemy>=2.0.39",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "python-semantic-release>=9.21.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5", # For testing async code
    "httpx>=0.27.0",          # For testing API endpoints
    "ruff>=0.11.2",            # Linter/Formatter
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "PL", "T20"] # Example selection, customize as needed
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
version_source = "tag"
commit_version_number = true
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): bump version to v{version}"
commit_parser_options = { conventional_commits_version = "0.1.0" }
major_on_breaking = true
hvcs = "github"
